fix(navbar): Navbar works on mobile screens

--- a/src/app/contact-section/contact-section.component.css
+++ b/src/app/contact-section/contact-section.component.css
@@ -155,5 +155,8 @@ svg circle {
   #left p {
     max-width: 100%;
   }
+  .wide {
+    width: 210px !important;
+  }
 }
 
